feat: integrate PWA support with service worker and install prompt; enhance app manifest and offline experience; add icon generation script and update index.html for improved metadata

--- a/apps/web/index.html
+++ b/apps/web/index.html
@@ -3,6 +3,20 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="theme-color" content="#000000" />
+    <meta name="description" content="3D Hospital Map Application for navigation" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="default" />
+    <meta name="apple-mobile-web-app-title" content="Hospital Map" />
+    <meta name="mobile-web-app-capable" content="yes" />
+    <meta name="msapplication-TileColor" content="#000000" />
+    <meta name="msapplication-tap-highlight" content="no" />
+    
+    <link rel="manifest" href="/manifest.json" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/icons/android-chrome-192x192.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/icons/android-chrome-192x192.png" />
+    <link rel="apple-touch-icon" href="/icons/android-chrome-192x192.png" />
+    <link rel="mask-icon" href="/icons/android-chrome-192x192.png" color="#000000" />
   </head>
 
   <body>
